Fix table horizontal scroll

--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -3,7 +3,6 @@
 .table-wrapper {
     margin-bottom: 2em;
     max-height: 400px;
-    overflow-x: hidden;
     overflow-y: auto;
     padding: 0;
     transition: max-height ease-in 0.5s;
